--- a/index.qmd
+++ b/index.qmd
@@ -1,155 +1,232 @@
 ---
-title: "Portfolio de Data Science"
+title: "Portfolio"
 subtitle: "Sandra Caeiro Pires"
 page-layout: full
 ---
 
-:::: {.columns}
-
+::::::: columns
 ::: {.column width="60%"}
-# Analista de Datos & Data Scientist
+# Analista de Datos | Data Scientist
 
 Soy **Sandra Caeiro Pires**, profesional especializada en análisis de datos con experiencia en transformar información en conocimiento y optimizar procesos. Mi enfoque combina programación, conocimiento de bases de datos y visualización para generar impacto y apoyar decisiones estratégicas.
 
 Mi formación en **Inteligencia Artificial y Big Data** de Miguel Altuna y mi experiencia profesional en **Lacor Menaje** me han permitido desarrollar soluciones de automatización y visualización para mejorar la toma de decisiones y optimizar procesos productivos.
-
 :::
 
 ::: {.column width="5%"}
 :::
 
-::: {.column width="35%"}
-![](Images/Sandra.png){.rounded width=250px}
+:::: {.column width="35%"}
+![](Images/Sandra.png){.rounded width="250px"}
 
-<div class="contact-info">
+::: contact-info
 <p><i class="bi bi-geo-alt"></i> Mendaro, Guipuzkoa</p>
-<p><i class="bi bi-telephone"></i> 688 607 204</p>
-<p><i class="bi bi-envelope"></i> <a href="mailto:sandracapi03@gmail.com">sandracapi03@gmail.com</a></p>
-</div>
-:::
 
+<p><i class="bi bi-telephone"></i> 688 607 204</p>
+
+<p><i class="bi bi-envelope"></i> <a href="mailto:sandracapi03@gmail.com">sandracapi03\@gmail.com</a></p>
+:::
 ::::
+:::::::
 
 ## Áreas de Especialización
 
-:::: {.grid}
+### ETL
 
+:::::: grid
 ::: {.g-col-4 .specialty-box}
-![](Images/data_viz.png){.specialty-icon}
-### Visualización de Datos
-Creación de dashboards interactivos y sistemas de seguimiento en tiempo real utilizando Power BI, Grafana, Matplotlib y Tableau.
+![](Images/visualizacion.png){.specialty-icon} \### Visualización de Datos Creación de dashboards interactivos y sistemas de seguimiento en tiempo real utilizando Power BI, Grafana, Matplotlib y Tableau.
 :::
 
 ::: {.g-col-4 .specialty-box}
-![](Images/automation.png){.specialty-icon}
-### Automatización
-Desarrollo de scripts y soluciones automatizadas para extracción, transformación y monitoreo de datos de producción.
+![](Images/automatizacion.png){.specialty-icon} \### Automatización Desarrollo de scripts y soluciones automatizadas para extracción, transformación y monitoreo de datos de producción.
 :::
 
 ::: {.g-col-4 .specialty-box}
-![](Images/analytics.png){.specialty-icon}
-### Análisis Avanzado
-Optimización de procesos productivos mediante análisis de datos y algoritmos de eficiencia.
+![](Images/analisis.png){.specialty-icon} \### Análisis Avanzado Optimización de procesos productivos mediante análisis de datos y algoritmos de eficiencia.
 :::
-
-::::
+::::::
 
 ## Proyectos Destacados
 
-:::: {.grid}
+::::: grid
+::: g-col-6
+### [Visualización y Automatización en Lacor](/DocumentacionConsumos/index.html)
 
-::: {.g-col-6}
-### [Visualización y Automatización en Lacor](/projects/lacordual/index.qmd)
-
-![](Images/lacordual_preview.png)
-
-Implementación de sistemas de visualización para seguimiento en tiempo real de consumos de máquinas y diseño de dashboards interactivos para la toma de decisiones estratégicas.
-
-[Explorar proyecto →](/projects/lacordual/index.qmd)
-:::
-
-::: {.g-col-6}
-### [Proyectos de Big Data](/projects/bigdata/index.qmd)
-
-![](Images/bigdata_preview.png)
+![](Images/Lacor.jpg)
 
 Desarrollo de scripts para extracción, limpieza y análisis de datos usando Python y R. Gestión de bases de datos y creación de reportes interactivos.
 
+Implementación de sistemas de visualización para seguimiento en tiempo real de consumos de máquinas y diseño de dashboards interactivos para la toma de decisiones estratégicas.
+
+
+[Explorar proyecto →](/DocumentacionConsumos/index.html)
+:::
+
+::: g-col-6
+### [Extracción de datos de Consumos WebScraping en Lacor](/projects/bigdata/index.qmd)
+
+![](Images/bigdata_preview.png)
+
+Extracción de Informes de los consumos tanto de las maquinas como de la planta y las placas solares para un futuro implemento de saber cuantos gastos tiene cada una.
+
 [Explorar proyecto →](/projects/bigdata/index.qmd)
+:::
+:::::
+
+
+### Lenguajes de Programación
+
+:::: {.grid}
+
+::: {.g-col-3 .tech-skill}
+![](Images/python.png){.tech-icon}
+#### Python
+Análisis de datos, automatización y desarrollo de scripts para ETL (Extract, Transform, Load).
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/r.png){.tech-icon}
+#### R
+Análisis estadístico y visualización de datos para proyectos de data science.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/sql.png){.tech-icon}
+#### SQL
+Gestión, consulta y optimización de bases de datos relacionales.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/html.png){.tech-icon}
+#### HTML/SVG
+Desarrollo de interfaces web y gráficos vectoriales para visualizaciones.
 :::
 
 ::::
 
-## Competencias Técnicas
+### Visualización de Datos
 
-:::: {.skill-grid}
+:::: {.grid}
 
-::: {.skill-category}
-#### Lenguajes de Programación
-- Python
-- R
-- SQL
-- HTML/SVG
+::: {.g-col-3 .tech-skill}
+![](Images/powerbi.png){.tech-icon}
+#### Power BI
+Creación de dashboards interactivos y análisis de datos empresariales.
 :::
 
-::: {.skill-category}
-#### Visualización de Datos
-- Microsoft Power BI
-- Grafana
-- Matplotlib, Seaborn
-- Tableau
+::: {.g-col-3 .tech-skill}
+![](Images/grafana.png){.tech-icon}
+#### Grafana
+Implementación de sistemas de monitoreo y visualización en tiempo real.
 :::
 
-::: {.skill-category}
-#### Bases de Datos
-- MongoDB
-- SQL Server
-- InfluxDB
-- MySQL
+::: {.g-col-3 .tech-skill}
+![](Images/matplotlib.png){.tech-icon}
+#### Matplotlib/Seaborn
+Visualización de datos científicos con librerías de Python.
 :::
 
-::: {.skill-category}
-#### Herramientas y Tecnologías
-- Git/GitHub
-- Excel Avanzado
-- Adobe: Photoshop, Premiere Pro, After Effects
-- Modelado 3D: Autodesk Maya, 3ds Max, MudBox
+::: {.g-col-3 .tech-skill}
+![](Images/tableau.png){.tech-icon}
+#### Tableau
+Desarrollo de visualizaciones dinámicas para análisis de negocio.
+:::
+
+::::
+
+### Bases de Datos
+
+:::: {.grid}
+
+::: {.g-col-3 .tech-skill}
+![](Images/mongodb.png){.tech-icon}
+#### MongoDB
+Gestión de bases de datos NoSQL para datos no estructurados.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/sqlserver.png){.tech-icon}
+#### SQL Server
+Administración de bases de datos empresariales.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/influxdb.png){.tech-icon}
+#### InfluxDB
+Bases de datos de series temporales para monitoreo.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/mysql.png){.tech-icon}
+#### MySQL
+Gestión de bases de datos relacionales open source.
+:::
+
+::::
+
+### Herramientas y Tecnologías
+
+:::: {.grid}
+
+::: {.g-col-3 .tech-skill}
+![](Images/github.png){.tech-icon}
+#### Git/GitHub
+Control de versiones y colaboración en desarrollo de software.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/excel.png){.tech-icon}
+#### Excel Avanzado
+Análisis, modelado y visualización de datos corporativos.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/adobe.png){.tech-icon}
+#### Adobe Suite
+Photoshop, Premiere Pro, After Effects para edición visual.
+:::
+
+::: {.g-col-3 .tech-skill}
+![](Images/3d.png){.tech-icon}
+#### Modelado 3D
+Autodesk Maya, 3ds Max, MudBox para diseño tridimensional.
 :::
 
 ::::
 
 ## Formación Académica
 
-:::: {.education-container}
-
-::: {.education-item}
+::::: education-container
+::: education-item
 ### Especialización en Inteligencia Artificial y Big Data
-**Miguel Altuna** | Septiembre 2024 - Mayo 2025
 
-- Desarrollo de scripts para extracción, limpieza y consolidación de datos
-- Análisis y transformación mediante Python y R
-- Gestión de bases de datos y creación de dashboards interactivos
+**Miguel Altuna** \| Septiembre 2024 - Mayo 2025
+
+-   Desarrollo de scripts para extracción, limpieza y consolidación de datos
+-   Análisis y transformación mediante Python y R
+-   Gestión de bases de datos y creación de dashboards interactivos
 :::
 
-::: {.education-item}
+::: education-item
 ### Grado Superior en Animación 3D y Programación
-**Ceinpro** | Septiembre 2019 - Junio 2021
 
-- Diseño y desarrollo de entornos interactivos y multimedia
-- Programación de aplicaciones y sistemas visuales
+**Ceinpro** \| Septiembre 2019 - Junio 2021
+
+-   Diseño y desarrollo de entornos interactivos y multimedia
+-   Programación de aplicaciones y sistemas visuales
 :::
-
-::::
+:::::
 
 ## Idiomas y Habilidades Adicionales
 
-:::: {.columns}
-
+:::::: columns
 ::: {.column width="45%"}
 ### Idiomas
-- Español: Nativo
-- Euskera: Nativo, B2
-- Inglés: B2
+
+-   Español: Nativo
+-   Euskera: Nativo, B2
+-   Inglés: B2
 :::
 
 ::: {.column width="10%"}
@@ -157,15 +234,14 @@ Desarrollo de scripts para extracción, limpieza y análisis de datos usando Pyt
 
 ::: {.column width="45%"}
 ### Cualidades Personales
-- Alta capacidad para trabajo en equipo
-- Actitud positiva y proactiva
-- Orientación a resultados
-- Carné de conducir y vehículo propio
+
+-   Alta capacidad para trabajo en equipo
+-   Actitud positiva y proactiva
+-   Orientación a resultados
+-   Carné de conducir y vehículo propio
 :::
+::::::
 
-::::
-
-<div class="cta-container">
-<a href="about.qmd" class="btn btn-primary">Conocer más sobre mí</a>
-<a href="projects/lacordual/index.qmd" class="btn btn-outline">Ver mis proyectos</a>
-</div>
+::: cta-container
+<a href="about.qmd" class="btn btn-primary">Conocer más sobre mí</a> <a href="projects/lacordual/index.qmd" class="btn btn-outline">Ver mis proyectos</a>
+:::
